# SBI-for-Diffusion-Models

./: .gitignore  README.md  profile_pipeline.py  pyproject.toml  rt_choice_model_pipeline.py  run_mnle_job.py  run_mnle_job_ryan.py  run_mnle_job_ryan_2.py
mnle_outputs/: posterior_samples_theta.npy
src/notebooks/: pulse_ddm_model.ipynb  ryans_test.ipynb
src/sbi_for_diffusion_models/: choice_model.py  constants.py  data_simulator.py  ddm_simulator.py  defaults.py  mnle.py  potentials.py  profile_utils.py  proposals.py  rt_choice_model.py  run_config.py
src/sbi_for_diffusion_models/models/: choice_model.py  rt_choice_model.py
tests/: test_all.py
