[project]
name = "SBI-for-Diffusion-Models"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "numpyro>=0.19.0",
    "pandas>=2.3.3",
    "sbi>=0.25.0",
    "torch<2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sbi_for_diffusion_models"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
]
